# ytr2md

./: .editorconfig  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  LICENSE.txt  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml
src/ytr2md/: MdFormatter.py  Ytr2Md.py  __init__.py  __main__.py
tests/: test_cli.py  test_formatter.py
