#
# https://packaging.python.org/en/latest/tutorials/packaging-projects
#
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "ytr2md"
version = "0.1.0"
description = "A Python CLI tool to format YouTube video transcripts to Markdown"
authors = [{ name = "thelumberjhack", email = "thelumberjhack@proton.me" }]
readme = "README.md"
requires-python = ">=3.10.0"
license = { file = "LICENSE" }
keywords = [
  "YouTube", "transcript", "download", "markdown", "obsidian"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Topic :: Text Processing :: Markup :: Markdown",
  "Topic :: Utilities",
  "Natural Language :: English",
  "Environment :: Console",
  "Operating System :: OS Independent",
]

dependencies = [
  "youtube-transcript-api",
  "requests",
]

[project.urls]
Repository = "https://github.com/thelumberjhack/ytr2md"
Changelog = "https://github.com/thelumberjhack/ytr2md/releases"
