[project]
name = "ytr2md"
version = "0.2.0"
description = "A Python CLI tool to format YouTube video transcripts to Markdown"
authors = [
    { name = "thelumberjhack", email = "5294889+thelumberjhack@users.noreply.github.com" }
]
dependencies = [
    "youtube-transcript-api>=0.6.2",
    "rich>=13.7.1",
    "click>=8.1.7",
]
readme = "README.md"
requires-python = ">= 3.10"
license = "MIT"
keywords = [
  "YouTube", "transcript", "download", "markdown", "obsidian"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Text Processing :: Markup :: Markdown",
  "Topic :: Utilities",
  "Natural Language :: English",
  "Environment :: Console",
  "Operating System :: OS Independent",
]

[project.scripts]
"ytr2md" = "ytr2md.__main__:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.13.2",
    "pre-commit>=3.7.0",
]

[project.urls]
Repository = "https://github.com/thelumberjhack/ytr2md"
Changelog = "https://github.com/thelumberjhack/ytr2md/releases"
